.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/lucasgb/.xmonad/build-x86_64-linux -o /home/lucasgb/.xmonad/xmonad-x86_64-linux

xmonad.hs:272:1: warning: [-Wtabs]
    Tab character found here.
    Please use spaces instead.
    |
272 |         xmproc0 <- spawnPipe "xmobar -x 1 $HOME/.config/xmobar/nord-xmobarrc"
    | ^^^^^^^^

xmonad.hs:271:3: error:
    Parse error in pattern: spawn
    Possibly caused by a missing 'do'?
    |
271 |   spawn "picom"
    |   ^^^^^^^^^^^^^...
